# moduloais

./: .gitignore  Cargo.toml  Dockerfile  build.py  entrypoint.sh  generated_bridge.dart
.github/workflows/: .flutter-build.yml.kate-swp  ci.yml  fdroid.yml  flutter-build.yml  playground.yml  third-party-RustDeskTempTopMostWindow.yml
appimage/: AppImageBuilder-aarch64.yml  AppImageBuilder-x86_64.yml
docs/: CODE_OF_CONDUCT-JP.md  CODE_OF_CONDUCT-NL.md
examples/custom_plugin/: Cargo.toml
flatpak/: rustdesk.json
flutter/: config.git
flutter/ios/Runner/: Info.plist
flutter/lib/: common.dart  main.dart
flutter/lib/models/: native_model.dart  platform_model.dart  web_model.dart
flutter/lib/utils/: multi_window_manager.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/windows/: .gitignore  CMakeLists.txt
libs/portable/: Cargo.toml  generate.py
res/: PKGBUILD  com.rustdesk.RustDesk.policy  moduloais.desktop  moduloais.service  osx-dist.sh  pacman_install  rpm-flutter-suse.spec  rpm-flutter.spec  rpm-suse.spec  rpm.spec  rustdesk-link.desktop  setup.nsi
res/.devcontainer/: Dockerfile  devcontainer.json
res/DEBIAN/: postinst  postrm  preinst  prerm
res/msi/: preprocess.py
src/: auth_2fa.rs  common.rs  custom_server.rs  flutter_ffi.rs  inline.rs  lang.rs  main.rs  ui.rs  ui_interface.rs
src/lang/: en.rs  fr.rs  ptbr.rs
src/platform/: macos.rs  windows.rs
src/plugin/: manager.rs
src/privacy_mode/: win_topmost_window.rs
src/server/: portable_service.rs
src/ui/: index.tis  inline.rs  install.tis
vdi/host/: Cargo.toml
(+48 files in other folders)
