[package]
name = "qemu-moduloais"
version = "0.1.0"
authors = ["AIS Labs <contato@aislabs.io>"]
edition = "2021"

[dependencies]
qemu-display = { git = "https://github.com/rustdesk/qemu-display" }
hbb_common = { path = "../../libs/hbb_common" }
clap = { version = "4.1", features = ["derive"] }
zbus = { version = "3.14.1" }
image = "0.24"
async-trait = "0.1"
